@@ -14,8 +14,6 @@ import roomescape.domain.Reservation;
 import roomescape.domain.ReservationTime;
 import roomescape.domain.Reservations;
 import roomescape.domain.Theme;
-import roomescape.entity.ReservationTimeEntity;
-import roomescape.entity.ThemeEntity;
 import roomescape.repository.FakeDatabase;
 import roomescape.repository.FakeReservationRepository;
 import roomescape.repository.FakeReservationTimeRepository;
@@ -23,10 +21,6 @@ import roomescape.repository.FakeThemeRepository;
 import roomescape.repository.ReservationRepository;
 import roomescape.repository.ReservationTimeRepository;
 import roomescape.repository.ThemeRepository;
-import roomescape.service.dto.request.ServiceReservationCreateRequest;
-import roomescape.service.dto.response.ServiceReservationResponse;
-import roomescape.service.dto.response.ServiceReservationTimeResponse;
-import roomescape.service.dto.response.ServiceThemeResponse;
 
 public class ReservationServiceTest {
 
@@ -35,7 +29,6 @@ public class ReservationServiceTest {
     private ReservationRepository reservationRepository;
     private ReservationTimeRepository reservationTimeRepository;
     private ThemeRepository themeRepository;
-    private Reservations reservations;
     private Clock clock;
 
     @BeforeEach
@@ -46,69 +39,48 @@ public class ReservationServiceTest {
         reservationTimeRepository = new FakeReservationTimeRepository(fakeDatabase);
         themeRepository = new FakeThemeRepository(fakeDatabase);
         clock = Clock.fixed(Instant.parse("2026-05-02T00:00:00Z"), ZoneId.of("Asia/Seoul"));
-        reservations = new Reservations(reservationRepository.readAll());
 
-        reservationService = new ReservationService(reservationRepository, reservationTimeRepository, themeRepository,
-                clock);
+        reservationService = new ReservationService(reservationRepository, clock);
     }
 
     @Test
     void createTest() {
-        ReservationTimeEntity reservationTimeEntity = reservationTimeRepository.create(
-                new ReservationTime(LocalTime.of(10, 0)));
-        ServiceReservationTimeResponse serviceReservationTimeResponse = ServiceReservationTimeResponse.from(
-                reservationTimeEntity);
-        ThemeEntity themeEntity = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
-        ServiceThemeResponse serviceThemeResponse = ServiceThemeResponse.from(themeEntity);
+        ReservationTime reservationTime = reservationTimeRepository.create(new ReservationTime(LocalTime.of(10, 0)));
+        Theme theme = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
 
-        ServiceReservationResponse responseDto = reservationService.create(reservations,
-                new ServiceReservationCreateRequest("fizz", LocalDate.of(2026, 5, 3), 1L, 1L));
+        Reservation reservationWithoutId = new Reservation("fizz", LocalDate.of(2026, 5, 3), reservationTime, theme);
+        Reservation reservation = reservationService.create(reservationWithoutId);
 
-        assertThat(responseDto).isEqualTo(
-                new ServiceReservationResponse(1L, "fizz", LocalDate.of(2026, 5, 3),
-                        serviceReservationTimeResponse,
-                        serviceThemeResponse));
+        assertThat(reservation.getId()).isEqualTo(1L);
+        assertThat(reservation.getName()).isEqualTo("fizz");
+        assertThat(reservation.getDate()).isEqualTo(LocalDate.of(2026, 5, 3));
     }
 
     @Test
     void readAllTest() {
-        ReservationTimeEntity reservationTimeEntity = reservationTimeRepository.create(
-                new ReservationTime(LocalTime.of(10, 0)));
-        ServiceReservationTimeResponse serviceReservationTimeResponse = ServiceReservationTimeResponse.from(
-                reservationTimeEntity);
-        ThemeEntity themeEntity = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
-        ServiceThemeResponse serviceThemeResponse = ServiceThemeResponse.from(themeEntity);
+        ReservationTime reservationTime = reservationTimeRepository.create(new ReservationTime(LocalTime.of(10, 0)));
+        Theme theme = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
 
-        reservationService.create(reservations,
-                new ServiceReservationCreateRequest("fizz", LocalDate.of(2026, 5, 3), 1L, 1L));
-        reservationService.create(reservations,
-                new ServiceReservationCreateRequest("fizz2", LocalDate.of(2026, 5, 3).plusDays(1), 1L, 1L));
+        reservationService.create(new Reservation("fizz", LocalDate.of(2026, 5, 3), reservationTime, theme));
+        reservationService.create(new Reservation("fizz2", LocalDate.of(2026, 5, 4), reservationTime, theme));
 
-        List<ServiceReservationResponse> response = reservationService.readAll();
+        Reservations reservations = reservationService.readAll();
 
-        assertThat(response.getFirst()).isEqualTo(
-                new ServiceReservationResponse(response.getFirst().id(), "fizz", LocalDate.of(2026, 5, 3),
-                        serviceReservationTimeResponse,
-                        serviceThemeResponse));
-        assertThat(response.get(1)).isEqualTo(
-                new ServiceReservationResponse(response.get(1).id(), "fizz2",
-                        LocalDate.of(2026, 5, 3).plusDays(1),
-                        serviceReservationTimeResponse,
-                        serviceThemeResponse));
+        List<Reservation> reservationList = reservations.stream().toList();
+        assertThat(reservationList.size()).isEqualTo(2);
+        assertThat(reservationList.get(0).getName()).isEqualTo("fizz");
+        assertThat(reservationList.get(1).getName()).isEqualTo("fizz2");
     }
 
     @Test
     void deleteTest() {
-        ReservationTimeEntity reservationTimeEntity = reservationTimeRepository.create(
-                new ReservationTime(LocalTime.of(10, 0)));
-        ThemeEntity themeEntity = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
-        Reservation reservation = new Reservation("fizz", LocalDate.of(2026, 5, 3), reservationTimeEntity.toDomain(),
-                themeEntity.toDomain());
-        reservationRepository.create(reservation, reservationTimeEntity, themeEntity);
-        reservationService.delete(reservations, 1L);
+        ReservationTime reservationTime = reservationTimeRepository.create(new ReservationTime(LocalTime.of(10, 0)));
+        Theme theme = themeRepository.create(new Theme("피즈의 모험", "모험 이야기", "url.jpg"));
+        reservationService.create(new Reservation("fizz", LocalDate.of(2026, 5, 3), reservationTime, theme));
 
-        List<ServiceReservationResponse> response = reservationService.readAll();
+        reservationService.delete(1L);
 
-        assertThat(response.size()).isEqualTo(0);
+        Reservations reservations = reservationService.readAll();
+        assertThat(reservations.stream().toList().size()).isEqualTo(0);
     }
 }
